fix(button): Tooltip hidden under other buttons

--- a/src/prefabs/button/button.scss
+++ b/src/prefabs/button/button.scss
@@ -66,6 +66,7 @@ $button-z-tooltip: $button-z-cost + 1;
 
     &:hover,
     &:focus {
+        z-index: $button-z-base + 1;
         border-color: $button-active-border-color;
 
         .mixer-spark-pill:not(.unaffordable) {
